--- a/style.css
+++ b/style.css
@@ -1,28 +1,127 @@
 * {
     margin: 0;
+    padding: 0;
+    /*background-image: url("img/home.jpg");*/
+}
+
+.imgbox {
+    display: grid;
+    height: 100%;
+}
+
+.center-fit {
+    max-width: 100%;
+    max-height: 100vh;
+    margin: auto;
 }
 
 .title {
-    text-align: center;
-    padding: 0;
-    font-size: 52;
-    font-style: oblique;
-    font-family: cursive;
+    font-family: Verdana, Geneva, sans-serif;
+    font-size: 26px;
+    padding: 10;
+    top: 85%;
+    left: 35%;
+    position: absolute;
+    letter-spacing: 0px;
+    word-spacing: 0.2px;
+    color: #ffffff;
+    font-weight: 700;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
 }
 
-.button {
-    margin: 25px;
-    top: 500px;
-    left: 500px;
-    height: 50px;
-    weight: 50px;
-    border: 2px solid red;
-    background-color: black;
-    color: red;
-    border-radius: 75px;
+a {
+    text-decoration: none;
+    color: #ffffff;
 }
 
-button: hover {
-    opacity: 0.6;
-    background-color: grey;
+* {
+    box-sizing: border-box
+}
+
+/* Set height of body and the document to 100% */
+body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial;
+}
+
+/* Style tab links */
+.tablink {
+    background-color: #555;
+    color: white;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 17px;
+    width: 25%;
+}
+
+.tabcontent: hover {
+    background-color: #000000;
+}
+
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+    color: white;
+    display: none;
+    padding: 100px 20px;
+    height: 100%;
+}
+
+#Home {
+    background-image: url("img/home.jpg");
+}
+
+#Portraits {
+    background-color: white;
+}
+
+#Landscape {
+    background-color: white;
+}
+
+#About {
+    background-color: orange;
+}
+
+/*----------------------------portfolio image grid------------------------------------------------------*/
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+    .column {
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+        flex: 100%;
+        max-width: 100%;
+    }
 }
