--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
-    /*background-image: url("img/home.jpg");*/
+    box-sizing: border-box
 }
 
 .imgbox {
@@ -13,6 +17,13 @@
     max-width: 100%;
     max-height: 100vh;
     margin: auto;
+}
+
+.homebckgrn {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0;
 }
 
 .title {
@@ -37,10 +48,6 @@ a {
     color: #ffffff;
 }
 
-* {
-    box-sizing: border-box
-}
-
 /* Set height of body and the document to 100% */
 body, html {
     height: 100%;
@@ -63,6 +70,7 @@ body, html {
 
 .tabcontent: hover {
     background-color: #000000;
+    opacity: 0.8;
 }
 
 /* Style the tab content (and add height:100% for full page content) */
@@ -74,19 +82,20 @@ body, html {
 }
 
 #Home {
+    background-color: #ffffff;
     background-image: url("img/home.jpg");
 }
 
 #Portraits {
-    background-color: white;
+    background-color: #ffffff;
 }
 
 #Landscape {
-    background-color: white;
+    background-color: #ffffff;
 }
 
 #About {
-    background-color: orange;
+    background-color: #ffffff;
 }
 
 /*----------------------------portfolio image grid------------------------------------------------------*/
@@ -110,6 +119,8 @@ body, html {
     max-height: 100%;
 }
 
+.column img :hover {}
+
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
     .column {
@@ -124,4 +135,28 @@ body, html {
         flex: 100%;
         max-width: 100%;
     }
+}
+
+#topbtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 15px;
+    border: 2px;
+    border-radius: 50px;
+    outline: none;
+    background-color: #808080;
+    color: #f2f2f2;
+    cursor: pointer;
+    font-family: fantasy;
+    padding: 15px;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+#topbtn:hover {
+    color: #ffffff;
+    opacity: 0.8;
 }
