--- a/style.css
+++ b/style.css
@@ -20,10 +20,12 @@ html {
 }
 
 .homebckgrn {
-    position: absolute;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 75%;
+    max-height: 75%;
     margin: 0;
+    margin-top: 16%;
+    margin-left: -9%;
+    transform: scale(0.9);
 }
 
 .title {
